--- a/SurfsUp/SurfsUpBlazorApp/Pages/_Layout.cshtml
+++ b/SurfsUp/SurfsUpBlazorApp/Pages/_Layout.cshtml
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="SurfsUpBlazorApp.styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
+    <link href="_content/Blazored.Modal/blazored-modal.css" rel="stylesheet" />
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css"
+
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
@@ -28,5 +32,8 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src ="_content/Blazored.Modal/blazored.modal.js"></script>  
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
 </html>
