--- a/SurfsUp/SurfsUpBlazorApp/_Imports.razor
+++ b/SurfsUp/SurfsUpBlazorApp/_Imports.razor
@@ -10,3 +10,8 @@
 @using SurfsUpBlazorApp.Shared
 @using System.Net.Http.Json
 @using System.Net.Http.Headers
+@using Blazored
+@using Blazored.Modal
+@using Blazored.Modal.Services
+@using Radzen.Blazor
+@using Radzen
