--- a/SurfsUp/SurfsUpBlazorApp/Shared/NavMenu.razor
+++ b/SurfsUp/SurfsUpBlazorApp/Shared/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="modalExample">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Modal
+            </NavLink>
+        </div>
     </nav>
 </div>
 
