--- a/SurfsUp/SurfsUpBlazorApp/Pages/Index.razor
+++ b/SurfsUp/SurfsUpBlazorApp/Pages/Index.razor
@@ -55,7 +55,8 @@ else
                             <td>@board.Price</td>
                             <td>@board.Equipment</td>
                             <td>
-                                <button @onclick="@(()=> modal.Show<DatePicker>("Vælg Dato"))" class="btn btn-primary" >Lej</button>
+                                <button @onclick="@(()=> modal.Show<Counter>("Vælg Dato"))" class="btn btn-primary" >Lej</button>
+                                
                             </td>
                         </tr>
                     }
